@@ -1,5 +1,15 @@
 2006-03-17  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-recipients.c:
+    * libseahorse/seahorse-recipients.glade:
+    * libseahorse/seahorse-keyset.c:
+    * libseahorse/seahorse-keyset.h: 
+    * libseahorse/seahorse-signer.c: Add a simple method for creating a 
+    keyset that watches all the signable keys, taking default key into 
+    account.
+    
+2006-03-17  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-widget.c:
     * libseahorse/seahorse-widget.h: SeahorseWidget derives from GtkObject
     so we can track lifetime easily.
